--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
 body{
     background-color: #087F8C;
 }
+h1{
+    margin-top: 2rem;
+    text-decoration-line: underline;
+    font-weight: bold;
+}
 #container{
     height:70vh;
     display: flex;
@@ -23,8 +28,8 @@ body{
 }
 
 .box{
-    height:18vmin;
-    width:18vmin;
+    height:15vmin;
+    width:15vmin;
     border-radius: 15px;
     border:none;
     box-shadow: 0 0 1rem;
@@ -75,5 +80,95 @@ body{
 
 .hide{
     display: none;
+}
+
+@media(max-width:768px){
+    #container{
+        height: 55vh;
+    }
+    #game{
+        height: 50vmin;
+        gap: 1.2rem;
+    }
+    .box{
+        height: 13vmin;
+    width: 13vmin;
+    font-size: 6vmin;
+    }
+    .btn{
+        width: 35vh;
+    }
+}
+
+@media(max-width:430px){
+
+     #container {
+        height: 56vh;
+        width: 60vh;
+    margin-top: 2rem;
+    }
+    #game{
+        height: 80vmin;
+    width: 85vmin;
+    }
+
+    .box{
+        height: 19vmin;
+    width: 19vmin;
+    font-size: 2rem;
+    }
+}
+
+
+@media(max-width:377px){
+
+    *{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    }
+    #container {
+        height: 60vh;
+        padding-left: 30px;
+    }
+    #game {
+        height: 80vmin;
+        gap: 1.2rem;
+        width: 80vmin;
+    }
+    .box {
+        height: 19vmin;
+        width: 19vmin;
+    }
+}
+@media(max-width:325px){
+    *{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    }
+    h1{
+        padding-left: 50px;
+    margin-top: 50px;
+    }
+    #container {
+        height: 60vh;
+        padding-left: 50px;
+    }
+    #game {
+        height: 90vmin;
+        gap: 1.2rem;
+        width: 90vmin;
+    }
+    .box {
+        height: 23vmin;
+        width: 23vmin;
+    }
+    .bb{
+        padding-left: 50px;
+
+    }
 }
 
